navbar looking better, added animation and href to arrow button. Need to double check alignment issues on projects descritpion on mobile view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,12 +70,18 @@ body {
 #my-content h1 {
     font-size: 2rem;
     font-weight: 700;
+    
 }
 
-.mburger {
+.mburger--tornado {
     position: absolute;
     top: 10px;
-    left: 80%;
+    left: 81%;
+}
+
+.mm-menu {
+    --mm-listitem-size: 100px;
+    font-size: 1.5rem;
 }
 
 .nav {
@@ -204,6 +210,25 @@ body {
 
 .work__btn a:hover {
     color: #fdfdfd;
+}
+
+/* Sink */
+.hvr-sink {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
+  -webkit-transform: translateY(8px);
+  transform: translateY(8px);
 }
 
 
